app/assets/stylesheets/main.less
/* ... */
h2.aside-title {
  margin-top: 0px;
  margin-bottom:10px;
}
h3.aside-title {
  font-weight: bold;
  margin-top: 0px;
  margin-bottom:10px;
}

#carousel-startpage.carousel
{
  margin-top:-36px;
}
#carousel-startpage .carousel-inner .item
{
  min-height: 200px;
  max-height: 350px;
  background-color: #fff;
}
#carousel-startpage .carousel-inner .item .shadow
{
  display:block;
  position:relative
}
#carousel-startpage .carousel-inner .item .shadow:before
{
  display:block;
  content:'';
  position:absolute;
  width:100%;
  height:100%;
  -moz-box-shadow:inset 0px 0px 3px 1px rgba(0,0,0,1);
  -webkit-box-shadow:inset 0px 0px 3px 1px rgba(0,0,0,1);
  box-shadow:inset 0px 0px 3px 1px rgba(0,0,0,1);
}
#carousel-startpage .carousel-inner .item img
{
  min-width:960px;
  min-height:283px;
  width:100%;
  margin:auto;
  max-width:1155px;
  max-height:320px;
  //box-shadow: inset 0px 30px 40px rgba(100,100,100,.1);
}

#carousel-startpage .carousel-control.right,
{
  background-image: linear-gradient(to right, transparent 0px, rgba(0, 0, 0, 0.2) 100%);
}
#carousel-startpage .carousel-control.right:hover,
{
  background-image: linear-gradient(to right, transparent 0px, rgba(0, 0, 0, 0.3) 100%);
}
#carousel-startpage .carousel-control.left
{
  background-image: linear-gradient(to left, transparent 0px, rgba(0, 0, 0, 0.2) 100%);
}
#carousel-startpage .carousel-control.left:hover
{
  background-image: linear-gradient(to left, transparent 0px, rgba(0, 0, 0, 0.3) 100%);
}
#carousel-startpage .carousel-indicators
{
  bottom: 0px;
}
#carousel-startpage .carousel-caption.green-bg
{
  background-color: rgba(@hdc-green-r,@hdc-green-g,@hdc-green-b,0.5);
  border: 1px solid white;
  border-radius: 2px;
  box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
}
#carousel-startpage .carousel-caption {
  padding-top: 15px;
  padding-bottom: 15px;
  bottom:35px;
}
#carousel-startpage .carousel-caption h2
{
  font-size:25px;
}
#carousel-startpage .carousel-caption.right-align
{
  right:15%;
  top:25%;
  left:auto;
  bottom:auto;
  padding: 15px;
  text-align: right;
}
#carousel-startpage .carousel-caption.left-align
{
  left:15%;
  top:25%;
  right:auto;
  bottom:auto;
  padding: 15px;
  text-align: left;
}

#carousel-startpage .carousel-caption h3,
#carousel-startpage .carousel-caption h2
{
  color:#fff;
}

// Startpage - Wizard buttons
.startpage-wizards-buttons {
  padding:15px;
  background-color:@hdc-light-gray;
  border-radius:6px;
}
.startpage-wizards-buttons .wizard-header {
  margin:5px 0px 10px 0px;
  font-weight:bold;
}
.startpage-wizards-buttons .wizard-lead {
  font-size:13px;
  line-height:16px;
  font-style:italic;
  display:block;
  margin-bottom:20px;
}
.startpage-wizards-buttons .select-step {
  border-radius:6px;
  padding:0px;
  margin-top:10px;
}
.startpage-wizards-buttons a.header {
  display:block;
  padding:15px;
  color:#fff;
  margin-top:0px;
  font-weight:bold;
}
.startpage-wizards-buttons a:hover {
  text-decoration:none;
}
.startpage-wizards-buttons .guest-wizard .select-step {
  background-color: rgba(@hdc-green-r, @hdc-green-g, @hdc-green-b, 0.8);
}
.startpage-wizards-buttons .guest-wizard .select-step:hover {
  background-color: rgba(@hdc-green-r, @hdc-green-g, @hdc-green-b, 1.0);
}
.startpage-wizards-buttons .host-wizard .select-step {
  background-color: rgba(@hdc-orange-r, @hdc-orange-g, @hdc-orange-b, 0.8);
}
.startpage-wizards-buttons .host-wizard .select-step:hover {
  background-color: rgba(@hdc-orange-r, @hdc-orange-g, @hdc-orange-b, 1.0);
}


// Startpage CTA
.panel-cta {
  position: relative;
  background-image: url("/assets/images/startpage/frontpage-cta-200x1024.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position:right;
  color:#fff;
  font-size:26px;
}
.panel-cta .col-cta {
  padding-top:20px;
  padding-bottom:20px;
  margin-bottom:0px;
  vertical-align: middle;
}
.panel-cta .btn-cta {
  margin:0px;
}
.panel-cta .text-cta {
  padding-top:14px;
}
// Startpage Boxes
.panel-startpage
{
  position: relative;
  display: inline-block;
  overflow: visible;
  border:1px solid #eee;
  border-radius: 2px;
  background-color: @hdc-light-gray;
  background-repeat: no-repeat;
  background-size: auto;
  background-position: top center;
  padding: 160px 0px 0px 0px;
  width:100%;
  background-image: url("/assets/images/startpage/box-default-full.png");
}
.panel-startpage:nth-child(4n)
{
  clear:both;
}
.panel-startpage .host-level-icon
{
  position: absolute;
  left:5px;
  top:5px;
  z-index:10;

}
.panel-startpage .host-image
{
  position: absolute;
  right:-16px;
  top:70px;
  display: inline-block;
}
.panel-startpage .body
{
  background-color: @hdc-light-gray;
  padding:15px 5px 7px 10px;
  z-index:50;
  min-height:115px;
  overflow:hidden;
}
.panel-startpage h2
{
  margin:0;
  font-size:1.2em;
  font-weight:bold;
  color:@hdc-dark-gray;
}
.panel-startpage .price-wrapper
{
  display: inline-block;
  margin-top:15px;
  text-align: right;
  float:right;
}
.panel-startpage .btn-booking {
  margin-top:10px;
  margin-bottom:0px;
}
.panel-startpage .price-info
{
  font-size:0.88em;
  color: @hdc-dark-gray;
  line-height:1.2em;
  display: block;
  clear: both;
}
.panel-startpage .price
{
  margin:0;
  font-size:1.4em;
  font-weight:bold;
  vertical-align: middle;
  color:@hdc-red;
}
.panel-startpage hr
{
  margin-top:5px;
  margin-bottom:5px;
  display: block;
  height: 1px;
  border: none;
  color: #999; //old IE
  background-color: #999; //Modern Browsers
}
.panel-startpage .location
{
  font-size:0.9em;
  display: block;
  clear: both;
  color:@hdc-black;
}
.panel-startpage .btn-primary
{
  display: block;
  margin-bottom:15px;
  clear: both;
}
.panel-startpage .btn-primary:hover
{
  text-decoration: none;
}
.panel-startpage .hdc-grade .star-rating.rating-disabled:hover {
  cursor: pointer;
}


// Review boxes

.reviews-list .host-image-link {
  position: relative;
  display: inline-block;
  float:left;
  width: 105px;
  max-width: 100%;
}
/* ... */

